# sequence-generator-rust

./: .env-example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  benchmarking.md  bit_structure.md
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
src/: lib.rs  main.rs  sequence_generator.rs
