[package]
name = "sequence-generator-rust"
description = "Customizable 64-bit unique distributed IDs sequence generator based on Twitter's ID (snowflake). Build in Rust"
version = "0.2.1"
authors = ["Luis Jesus Diaz Manzo <luis@drconopoima.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/drconopoima/sequence-generator-rust.git"
keywords = ["distributed", "id", "generator", "snowflake", "unique"]

[lib]
name = "sequence_generator"
path = "src/lib.rs"

[[bin]]
name = "sequence_generator"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
rand = "0.8.1"
structopt = "0.3.21"
