[package]
name = "sequence-generator-rust"
description = "Customizable 64-bit unique distributed IDs sequence generator based on Twitter's ID (snowflake). Build in Rust"
version = "0.5.0"
authors = ["Luis Jesus Diaz Manzo <luis@drconopoima.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/drconopoima/sequence-generator-rust.git"
keywords = ["distributed", "id", "generator", "snowflake", "unique"]
rust-version = "1.67.0"
# time 0.3.27 minimum supported version 1.67.0, clap+dotenvy minimum version 1.56.1 

[lib]
name = "sequence_generator"
path = "src/lib.rs"

[[bin]]
name = "sequence_generator"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "^0.3", features=["parsing"] }
dotenvy = "^0.15"
clap = { version = "^3.2",  default-features= false, features = ["std", "derive"] }

[dev-dependencies]
rand = "^0.8"
